fix: second attempt at getting height correct on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ footer {
     }
 
     #hero{
-        height: calc(100vh - 95px);
+        height: calc(100vh - 110px);
     }
 
     #hero-text h1 {
